# Governed-Analytics-Platform

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.en.md  README.md  README.pt-BR.md  SECURITY.md  codecov.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
app/: __init__.py  context.py  i18n.py  main.py
contracts/: data_quality_rules.yml
data/: README.md
dbt/: README.md  dbt_project.yml  profiles.yml  profiles.yml.example
docs/: 00_planejamento.md  01_contexto.md  02_carga_e_modelagem.md  03_catalogacao.md  04_analises_sql.md  05_dashboard.md  06_arquitetura_proposta.md  07_bonus_genai_dataapps.md  08_pipelines.md  09_genai_llm_processar.md  10_apresentacao_final.md  README.en.md  README.md  about_dadosfera.md  architecture.md  bi_bonus.md  branch_protection_recommendation.md  business_glossary.md  case_answers.md  case_delivery_checklist.md  case_study.md  collection_catalog.md  dadosfera_api_sync.md  dadosfera_capture_runbook.md  dadosfera_evidencias.md  dadosfera_native_pipeline_runbook.md  data_classification.md  data_dictionary.md  data_quality_report.md  dbt_adoption.md  dbt_lineage.md  demo_mode.md  eda_summary.md  engineering_governance.md  executive_scorecard.md  executive_summary.md  fact_orders_enriched.md  final_pre_delivery_audit.md  genai_bonus.md  governance_policy.md  (+24 more)
images/: README.md  capture_checklist.md
powerbi/: INSIGHTS_EXECUTIVOS.md  README.md  README_powerbi.md  checklist_entrega.md  delivery_plan.md  evidencia_query.md  query_principal_01_kpis_executivos.csv  query_principal_02_evolucao_receita_tempo.csv  query_principal_03_top10_categorias_receita.csv  query_principal_04_distribuicao_pedidos_status.csv  query_principal_05_estados_maior_percentual_atraso.csv  query_principal_06_top10_categorias_frete_medio.csv  query_principal_07_detalhamento_categoria.csv
presentation/: APRESENTACAO_VIDEO_CASE_DADOSFERA.md  APRESENTACAO_VIDEO_CASE_DADOSFERA_YOUTUBE.md  README.md  case_deck.md  legacy_video_presentation.md  project_deck.md  talk_track.md
scripts/: capture_streamlit_screenshots.py
sql/: 01_exploracao_inicial.sql  02_limpeza.sql  03_kpis.sql  04_series_temporais.sql  05_categorias.sql  query_principal.sql
src/: __init__.py  api.py  build_analytics.py  business_rule_validation.py  catalog.py  config.py  dadosfera_api_key.py  dadosfera_catalog_sync.py  dadosfera_pipeline_ops.py  data_classification.py  data_loader.py  data_quality.py  data_quality_rules.py  duckdb_engine.py  eda.py  enrich.py  export_power_bi.py  export_query_result_images.py  export_text_pdf.py  genai_feature_extraction.py  governance_history.py  governance_observability.py  governance_scorecards.py  governance_types.py  governance_validation.py  ingest.py  lgpd_classifier.py  lgpd_policy.py  lineage.py  observability.py  platform_publication.py  preprocess.py  privacy_governance_artifacts.py  privacy_transformations.py  publication_gate.py  publish_dashboard.py  published_monitoring.py  quality.py  release_management.py  report_generator.py  (+11 more)
streamlit_app/: analytics.py  app.py  charts.py  data.py  formatting.py  i18n.py  sections.py  theme.py
tests/: conftest.py  test_api.py  test_api_snowflake.py  test_app_main.py  test_app_pages_rendering.py  test_build_analytics.py  test_build_analytics_helpers.py  test_business_rule_validation.py  test_catalog.py  test_catalog_module.py  test_config.py  test_dadosfera_api_key.py  test_dadosfera_catalog_sync.py  test_dadosfera_pipeline_ops.py  test_dadosfera_pipeline_ops_cli.py  test_data_classification_module.py  test_data_filters.py  test_data_loader.py  test_data_quality.py  test_data_quality_rules.py  (+51 more)
(+158 files in other folders)
