[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "olist-governed-analytics-platform"
version = "0.1.0"
description = "Governed analytics platform with LGPD privacy classification, data quality controls, schema contracts, audit reports, and Streamlit executive interface."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "streamlit==1.56.0",
    "altair==6.1.0",
    "plotly",
    "matplotlib",
    "seaborn",
    "duckdb",
    "pyarrow",
    "openpyxl",
    "python-dotenv",
    "PyYAML",
    "jinja2",
    "pytest",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.12,<0.16",
    "mypy>=1.18,<1.21",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov=streamlit_app --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
