[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "olist-governed-analytics-platform"
version = "0.1.0"
description = "Governed analytics platform with LGPD privacy classification, data quality controls, schema contracts, audit reports, and Streamlit executive interface."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "streamlit==1.56.0",
    "altair==6.1.0",
    "plotly",
    "matplotlib",
    "seaborn",
    "duckdb",
    "pyarrow",
    "openpyxl",
    "python-dotenv",
    "PyYAML",
    "jinja2",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.12,<0.16",
    "mypy>=1.18,<1.21",
    "playwright",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov=app --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 100
show_missing = true
include = [
    "src/config.py",
    "src/data_loader.py",
    "src/data_quality_rules.py",
    "src/governance_types.py",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
