[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "olist-governed-analytics-platform"
version = "0.1.0"
description = "Governed analytics platform with LGPD privacy classification, data quality controls, schema contracts, audit reports, and Streamlit executive interface."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3.1",
    "numpy>=1.26,<3",
    "streamlit==1.56.0",
    "altair==6.1.0",
    "plotly>=5.24,<7",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "duckdb>=1.1,<2",
    "pyarrow>=17,<25",
    "openpyxl>=3.1,<4",
    "python-dotenv>=1.0,<2",
    "PyYAML>=6,<7",
    "jinja2>=3.1,<4",
    "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.12,<0.16",
    "mypy>=1.18,<1.21",
    "playwright",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
